# lib/api-spec/openapi.yaml
@@ -527,9 +527,11 @@ components:
 
     Stats:
       type: object
-      required: [totalTicketsSold, totalRevenue, totalPrizesPaid, completedDraws, activeVendors, recentWinners]
+      required: [totalTicketsSold, totalAvailable, totalRevenue, totalPrizesPaid, completedDraws, activeVendors, recentWinners]
       properties:
         totalTicketsSold:
+          type: integer
+        totalAvailable:
           type: integer
         totalRevenue:
           type: number
